# mj

./: .cspell-dict.txt  .cspell.json  .cursorrules  .env.example  .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  .prettierignore  ARCHITECTURE_REVIEW.md  CLAUDE.md  DEVELOPMENT_STATUS.md  EMOJI_REACTIONS.md  FINAL_STATUS.md  FINAL_SUCCESS_REPORT.md  MONOREPO_AUDIT.md  MULTI_TENANCY_PLAN.md  PRODUCTION_DEPLOYMENT_FINAL_STATUS.md  README.md  SETUP_COMPLETE.md  UI_VALIDATION_CHECKLIST.md  VERCEL_BYPASS_TROUBLESHOOTING.md  VERCEL_CLI_REFERENCE.md  VERCEL_PYTHON_MODULE_IMPORT_SOLUTION.md  WEST_COAST_OPTIMIZATION.md  architectural-analysis-report.md  check-status.js  cleanup-and-resolution-summary.md  legacy_logs.csv  llm-implementation-prompt.md  logs.txt  mj (season 3+) - logs (4).csv  package-lock.json  package.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
apps/rating-engine/: CONFIGURATION_STATUS.md  Pipfile  README.md  VERCEL_FLUID_TODO.md  package.json  pyproject.toml  requirements.txt  test_deployment.sh  vercel.json  verify_materialization.py
apps/rating-engine/api/: hello.py  index.py  materialization.py  test.py
apps/rating-engine/configs/: README.md  season-3.yaml  season-4-v2.yaml  season-4.yaml  season-5.yaml
apps/rating-engine/configs/experimental/: high-stakes.yaml
apps/rating-engine/docs/: CODE_REVIEW_FINAL.md  CODE_REVIEW_SUMMARY.md  MATERIALIZATION.md
apps/rating-engine/rating_engine/: __init__.py  materialization.py
apps/rating-engine/scripts/: .gitignore  README.md  cleanup_legacy_data.py  config_manager.py  materialize_data.py  migrate_legacy_data.py  register_configs.py  verify_database.py
apps/rating-engine/src/rating_engine/: __init__.py  main.py  rating.py
apps/rating-engine/tests/: test_api.py  test_integration.py  test_main.py  test_materialization.py
apps/web/: .env.example  .env.local  GAME_END_DETECTION_REVIEW.md  HAND_RECORDING_IMPLEMENTATION_SUMMARY.md  configuration-materialization-analysis.md  configuration-ui-analysis-summary.md  configuration-ui-improvements.md  debug-chart-values.js  debug-game-data.js  debug-games-page.js  debug-rating-chart-data.js  debug-supabase-query.js  debug-vercel-connection.js  diagnose-rating-issues-fixed.js  diagnose-rating-issues.js  diagnose-routing-issue.js  e2e-test-fix-guide.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.production.config.ts  production-e2e-analysis.md  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
apps/web/docs/: backend-fixes-required.md  bug-bash-report.md  bug-diagnosis-report.md  cache-corruption-resolution.md  development-process-improvements.md  phase-0-5-completion-report.md  phase-0-audit-report.md  phase-0-completion-report.md  phase-0-validation-report.md  phase-0-verification-checklist.md  production-testing-guide.md  testing-checklist.md  troubleshooting-guide.md  (+1 more)
docs/: 01-project-overview.md  02-technical-architecture.md  03-database-schema.md  04-development-setup.md  05-rating-system.md  06-feature-roadmap.md  07-external-apis.md  08-operational-guide.md  09-environment-variables.md  10-ui-design-specification.md  11-player-profile-requirements.md  CODEBASE_ANALYSIS.md  README.md  REFACTORING_SUMMARY.md  VERCEL_DEPLOYMENT_RUNBOOK.md  architecture-overview.md  codebase-redesign-plan.md  development-checklist.md  hand_notes_examples.txt  implementation-review.md  playwright-integration-plan.md  ratings.md  spec-vs-implementation-analysis.md
docs/specs/: configuration-playground.md  data-architecture.md  game-completion-badge-standardization.md  game-history.md  games-page-multiple-live-games.md  hand-recording-feature.md  player-profiles.md  pwa-leaderboard.md  riichi-mahjong-league-product-requirements.md  season-statistics.md
scripts/: validate-with-browser.mjs  verify-functionality.mjs
supabase/: config.toml  seed.sql
supabase/migrations/: 20250113000000_add_hand_recording.sql  20250114000000_add_hand_events_phase1.sql  20250114000001_add_game_insert_policies.sql  20250114000003_add_game_format.sql  20250114000004_allow_anonymous_player_creation.sql  20250124000000_remove_security_definer_from_views.sql  20250713214553_init_phase_0_schema.sql  20251212060001_allow_anonymous_game_creation.sql  20251228193722_remote_schema.sql  20260127201733_achievements.sql  20260307120000_stripe_subscriptions.sql  20260308120000_drop_unused_tables.sql
(+248 files in other folders)
