[project]
name = "rating-engine"
version = "0.1.0"
description = "OpenSkill rating calculation engine for Riichi Mahjong League"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openskill>=5.0.0",
    "pydantic>=2.5.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.16.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "postgrest>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
    "httpx>=0.25.0",  # For testing FastAPI
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rating_engine"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
